--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ baseurl = "/"
 copyright = "&copy; Dominic J. Bennett {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-58174027-2"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
